@@ -1,7 +1,7 @@
-a6061a4763abe4e32fc73d9eb59e4ac9 *DESCRIPTION
-881fcdfb8dc130d16e38a5dea028501a *NAMESPACE
-92cdca818acbba92796c6ed1b0e9466c *NEWS
-ccf7df03cbed7196f92a59a011abbf9a *R/aaa.r
+a8564ca527b5e5ad75ead7d4563b2ad0 *DESCRIPTION
+1f816e60e748c552d61f50cce1d76e65 *NAMESPACE
+996eab3a9d5b352a501b878459b7d8c7 *NEWS
+25f224508a08e8afb49d366e985a7bd6 *R/aaa.r
 69555c9b4912ec227eb1d2b4f7ad6673 *R/adj_rand.r
 16d8c983a5a9f93daa7d726e00022d46 *R/alldups.r
 dbc1aef8fcc2eaf2b5fca46279c99b08 *R/bclust.r
@@ -20,18 +20,19 @@ df1dd84cd1ca65f5556b0c7025e1a0dc *R/ellipses.r
 ebfa1a0887859d9cb7a6ada8eb1ef17a *R/files.r
 cc71129f304e2a92f2439e971d6eb8b0 *R/fill.r
 64bdef4ca277e5e576362e3642eb45f3 *R/gencldata.r
+d9d9fa0fb38e6b76e4758c4cc7f4d3f9 *R/gini.r
 61c5f73b5d8ae25529287ab56c32f161 *R/gower_dist.r
 9697d0a8cf9ee6be430d7ad7c65e366d *R/gradd.r
 44c967d6acb0d3905ec42e492f0663e3 *R/hulls.r
 66403c99d1a7cb3adab6b3107d8528b1 *R/jclust.r
-127e3c068677a9ebc10aa7e042947a11 *R/k.r
+4ca205b1bfd61c67cd87939386db6614 *R/k.r
 e4b7c0bbeaf4f053ef2e78a345df88ec *R/life.r
 cf6400f4c409b424613078f0bee7755c *R/linechart.r
 1d9b3c083b371952ecab98f5415921da *R/mdsv.r
 676960234df898b1d9a67d8709245fa2 *R/miney.r
 9cd125295f4abe62c4c635b64ad64866 *R/minus_names.r
 908c6af125223f593bc421adcb247e1f *R/misclass.r
-0552ee94f28fd4523de0817603e3f275 *R/mrbayes.r
+5d9f7dde8435f9e198b1c179097cd717 *R/mrbayes.r
 665b6aa25438cf1235381f83c22ec30c *R/mrh.r
 2b13a9216710a8eb80b868218144cb1e *R/nc_dist.r
 c361d54cfe605a071f497c2bd6185ae8 *R/overlap.r
@@ -53,11 +54,12 @@ bc7978929857f9f94140c2842aba8455 *R/rpart2newick.r
 9c5a55a8f45d08a9f24ab41b6a322a1a *R/squares.r
 2c973866833c2932d07bd5485ece65b7 *R/str.r
 dd6b67eb9ed7c390e54fe64f8ff1346b *R/tcoords.r
+dc9c0765f4b2aab0533a85ebee166065 *R/ttcols.r
 9ed4ed2fff64684a6dcfb43744494dad *R/updist.r
 1c91f38bf616edb2017f466b0059179e *R/vicinities.r
 a629e8c27db4ee900c10a630323c8e3f *R/vtcoeffs.r
 07b3c5b0282d9e88d9f5af28589d3cd1 *R/zzz.r
-1e412227800bcb52f08ac98985dd585c *TODO
+c18a3dbc4d931237d286b2bb47145952 *TODO
 968aea23ace8f3cae78e088f57789dbd *data/atmospheres.rda
 43f7bb988677985b9f1ddc705941acf5 *data/chaetocnema.rda
 ba4110c3ddab85b50bcc4252e2c32491 *data/classifs.rda
@@ -118,6 +120,7 @@ bda93feaf6e241cb79e9f2ecd3cf2e28 *man/Ex.margins.Rd
 14c671c463deb2e1575173dd001776be *man/Fill.Rd
 455bfea84dbb41d094bfc071d16bad10 *man/Gap.code.Rd
 81009898b97eca1332dfd6a7cfdbe0f4 *man/Gen.cl.data.Rd
+6504f9f539fd9a2968ac3affa585853f *man/Gini.Rd
 9895cdcdd3f238d44f94f4dccab3b332 *man/Gower.dist.Rd
 33f6b54383646aeb0c1155fc511995ec *man/Gradd.Rd
 2a031ba84a825d27d8c22ae5ec06c700 *man/Gridmoon.Rd
@@ -125,14 +128,14 @@ d326f4e14e3203c9be1a364a4f1dc3c7 *man/Hcl2mat.Rd
 3c0fe673bfdf0c6ec09f718f004dae49 *man/Hclust.match.Rd
 47887173abc452294a67a815ad93f462 *man/Hcoords.Rd
 fa6cc61294a87739ba5c93c7c1a9b328 *man/Histr.Rd
-9b4c692a29f4f8b6537bb19b8c40ed35 *man/Hulls.Rd
+add8283c5a7aaf4e78eda123226853c5 *man/Hulls.Rd
 7a098e2b62808f2dad848b14fe46703d *man/Infill.Rd
 1f6505322c863ab7bbae43d3a038992d *man/Jclust.Rd
 202879b148a7b0c20e1962cf75f5b37c *man/K.Rd
 fdbf432b0a3c189dde8d02fa704c15f5 *man/Life.Rd
 2b66a8eb90efb7709164a30b8e9f69c4 *man/Linechart.Rd
 20ee379d86b426760c785971d63feaf0 *man/Ls.Rd
-fe81e811bf4c67d0427db29c5fdbb594 *man/MDSv.Rd
+9d146b9c3a94de612b1395696aeceb2e *man/MDSv.Rd
 71534006377161862ac2a804deb058b1 *man/MRH.Rd
 4318b46b3af6d4e3bbc460a801156d66 *man/Mag.Rd
 a4a1f4a621e4b89d91d2cb779fb27066 *man/Miney.Rd
@@ -175,6 +178,7 @@ f72767255d71bf574a6fb07313f4d874 *man/Tcoords.Rd
 6c0aa1a5da9959ac08b4f4544f7b5aba *man/Tobin.Rd
 25ea50c6eaca0b1ec5e463c8c54a431d *man/Toclip.Rd
 6dc79a498a4ab873a60617b42edfad6e *man/Topm.Rd
+0a28f8a04323ca5cb01c5102911dbadb *man/Ttcols.Rd
 6645e2fd6a028f5ef49f34f7a7e4bc1c *man/Updist.Rd
 39178345c972f092faa61121ababf2fa *man/VTcoeffs.Rd
 aa19c8b73b34c4a3bd140124bcc1dfe0 *man/Vicinities.Rd
