@@ -1,3 +1,34 @@
+"Negative overlap" -- explain better as surrogate distances between
+clouds, expand to cases where polygons _are_ intersecting
+
+Biokey(): fill gaps in conversion pairs, keep node labels (descriptions,
+taxon names) everywhere, add object type checks, modularize
+
+Think how to use dichotomousKey::dk_classify() as prototype of the
+function which reads Biokey() key ineractively
+
+Idea: bootstrap any clustering via distance matrices made of
+1-dimensional vector of cluster labels; stability of the whole
+clusterization via difference between dist from  clustering and dists
+from bootstrapped clusterings; stability of particular class via
+differences between average intra- and inter-cluster distances in tested
+and bootstrapped
+
+Idea: Normalize.ranks(classif) to (1) fit ranks into given list and (2)
+propagate main (whole numbers) ranks (based on code from Biokey())
+
+Idea: Partkey() -- interactive stepwise dichotomous key from
+morphological table using rpart::rpart() or tree::tree() as helper; think
+how to create multi-character splits (e.g., algorithmized character
+removal or resampling)
+
+Idea: first, create a flower formula representation, and make code to
+find the shortest path between two formulas with elementary operations
+(Antopolsky's ideas)
+
+Idea: HHomonyms() to work with API or directly with hemihomonyms
+database; maybe, it deserves the separate package
+
 Allow MRH(..., method="branches") (e.g., via Hcl2mat) to output cluster
 "height" instead of binary 0 or 1, and/or bootstrap support for each
 cluster
@@ -13,17 +44,10 @@ Test MDSv(): lm() call to data.frame() might fail presumably when some
 scores are NA. Unable to reproduce so maybe check equality of length of
 vectors on both sides of lm() formula
 
-Test Biokey() more, fill gaps in conversion pairs, keep node labels
-(descriptions, taxon names) everywhere, add object type checks,
-modularize
-
 Test more experimental Misclass() code, especially with table()-specific
 functions and NAs (but "ignore" seems to work)
 
 Think if it is better to make the field in the Life() infinite
-
-Think how to use dichotomousKey::dk_classify() as prototype of the
-function which reads Biokey() key ineractively
 
 Think if it is possible to optimize BestOverlap() with
 parallel::mclapply() or similar
@@ -38,24 +62,11 @@ Think how to standardize MrBayes() writing Nexus (now there are two ways,
 Think how in Rostova.tbl(): to make splitting variable independent; think
 how to enhance Topm() with significance of correlations
 
-Idea: Partkey() -- interactive stepwise dichotomous key from
-morphological table using rpart::rpart() or tree::tree() as helper
-
 Idea: Booster() analogous to Tapkee(); modify BootA() to use it
-
-Idea: first, create a flower formula representation, and make code to
-find the shortest path between two formulas with elementary operations
-(Antopolsky's ideas)
-
-Idea: HHomonyms() to work with API or directly with hemihomonyms
-database; maybe, it deserves the separate package
 
 Idea: Coarse(phylo) on the base of ape::di2multi() which allows for given
 number of hierarchies (maybe, by iteration), collapsing and keeping nodes
 using e.g., bootstrap support
-
-Idea: Normalize.ranks(classif) to (1) fit ranks into given list and (2)
-propagate main (whole numbers) ranks (based on code from Biokey())
 
 Idea: using Hcoords() and Tcoords(), it is in principle possible to plot
 'hclust' object horizontally, without conversion into dendrogram, like
